Fix : Pipeline execution results overflow

--- a/openmetadata-ui/src/main/resources/ui/src/components/Execution/TreeView/tree-view-tab.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Execution/TreeView/tree-view-tab.less
@@ -28,3 +28,8 @@
     display: none;
   }
 }
+
+.tree-without-indent .ant-tree-treenode {
+  width: 100%;
+  overflow-x: hidden;
+}
